--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
 
-<header>
-<h1>Career With Ashwani</h1>
-<p>Govt & Private Jobs | Career Guidance</p>
+<header class="site-header">
+  <div class="header-inner">
+    <img src="logo.png" alt="Career With Ashwani Logo" class="logo">
+    <div>
+      <h1>Career With Ashwani</h1>
+      <p>Govt & Private Jobs | Career Guidance</p>
+    </div>
+  </div>
 </header>
 <section class="jobs">
   </div>
