--- a/index.html
+++ b/index.html
@@ -6,53 +6,53 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
 <header class="site-header">
   <div class="header-inner">
-  
-    <div>
+    <div class="brand">
       <h1>Career With Ashwani</h1>
       <p>Govt & Private Jobs | Career Guidance</p>
     </div>
   </div>
-</header>
-<section class="jobs">
-  </div>
-</section>
-<nav>
-<a href="index.html">Home</a>
-<a href="jobs.html">Jobs</a>
-<a href="about.html">About</a>
-<a href="contact.html">Contact</a>
-<a href="privacy.html">Privacy</a>
-</nav>
 
-<section>
-<h2>Welcome</h2>
-<p>
-Latest government aur private job updates, form filling help
-aur career guidance yahan available hai.
-</p>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="jobs.html">Jobs</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="privacy.html">Privacy</a>
+  </nav>
+</header>
+
+
+<section class="card-section">
+  <h2>Welcome</h2>
+  <p>
+    Latest government aur private job updates, form filling help
+    aur career guidance yahan available hai.
+  </p>
 </section>
   
-<section>
-<h2>Our Services</h2>
-<ul>
-<li>Job Form Filling</li>
-<li>Skill Development</li>
-<li>Career Guidance</li>
-<li>Online Job Support</li>
-</ul>
+<section class="services">
+  <h2>Our Services</h2>
+
+  <div class="service-grid">
+    <div class="service-box">📝 Job Form Filling</div>
+    <div class="service-box">🎯 Skill Development</div>
+    <div class="service-box">📚 Career Guidance</div>
+    <div class="service-box">💼 Online Job Support</div>
+  </div>
 </section>
+  <a class="whatsapp-btn"
+   href="https://wa.me/91XXXXXXXXXX"
+   target="_blank">
+   💬 WhatsApp for Job Help
+  </a>
 
 <section>
-<a class="whatsapp" href="https://wa.me/918874256902">
-📲 WhatsApp for Job Help
-</a>
-</section>
 
-<footer>
-<p>© 2026 Career With Ashwani | Ashwani Dubey</p>
+<footer class="footer">
+  <p>© 2026 Career With Ashwani</p>
+  <p>Managed by Ashwani Dubey</p>
 </footer>
 
 </body>
