--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <section class="card-section">
   <h2>Welcome</h2>
   <p>
-    Latest government aur private job updates, form filling help
-    aur career guidance yahan available hai.
+    Welcome to Career With Ashwani
+Your trusted platform for the latest Government & Private job updates, career guidance, and job support services. We are here to help you choose the right career path and move forward with confidence.
   </p>
 </section>
   
