--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@ Your trusted platform for the latest Government & Private job updates, career gu
     <div class="service-box">💼 Online Job Support</div>
   </div>
 </section>
+  <section class="apply-job">
+  <h2>Apply for Job</h2>
+  <p>Fill the form below and we will contact you shortly.</p>
+
+  <form action="https://formsubmit.co/ashwanidhardwivediofficial@gmail.com" method="POST" class="apply-form">
+
+    <!-- Disable captcha -->
+    <input type="hidden" name="_captcha" value="false">
+
+    <!-- Email subject -->
+    <input type="hidden" name="_subject" value="New Job Application Received">
+
+    <!-- Success page (optional) -->
+    <input type="hidden" name="_next" value="thankyou.html">
+
+    <input type="text" name="Name" placeholder="Your Name" required>
+
+    <input type="tel" name="Mobile Number" placeholder="Mobile Number" required>
+
+    <input type="email" name="Email" placeholder="Email Address" required>
+
+    <select name="Job Type" required>
+      <option value="">Select Job Type</option>
+      <option>Government Job</option>
+      <option>Private Job</option>
+      <option>Form Filling</option>
+      <option>Career Guidance</option>
+    </select>
+
+    <textarea name="Message" placeholder="Your Message" rows="4"></textarea>
+
+    <button type="submit">Submit Application</button>
+  </form>
+  </section>
   <a class="whatsapp-btn"
    href="https://wa.me/918874256902"
    target="_blank">
