--- a/jobs.html
+++ b/jobs.html
@@ -35,6 +35,60 @@
 <p><b>Fees:</b> ₹500</p>
 <a href="https://indianrailways.gov.in" target="_blank">Apply Online</a>
 </section>
+  <section class="job-details">
+
+  <h1>Bihar Staff Selection Commission (BSSC)</h1>
+  <h2>Bihar 2nd Inter Level Combined Competitive Exam 2026</h2>
+
+  <div class="job-box">
+    <h3>Important Dates</h3>
+    <ul>
+      <li>Application Start : 27/09/2023</li>
+      <li>Last Date Apply : 13/02/2026</li>
+      <li>Fee Payment Last Date : 13/02/2026</li>
+      <li>Exam Date : As per Schedule</li>
+    </ul>
+  </div>
+
+  <div class="job-box">
+    <h3>Application Fee</h3>
+    <ul>
+      <li>General / OBC / EWS : ₹100</li>
+      <li>SC / ST : ₹100</li>
+      <li>Payment Mode : Online</li>
+    </ul>
+  </div>
+
+  <div class="job-box">
+    <h3>Age Limit (01/08/2025)</h3>
+    <ul>
+      <li>Minimum Age : 18 Years</li>
+      <li>Maximum Age (Male) : 37 Years</li>
+      <li>Maximum Age (Female) : 40 Years</li>
+    </ul>
+  </div>
+
+  <div class="job-box">
+    <h3>Vacancy Details</h3>
+    <p>Total Post : <b>25311</b></p>
+    <ul>
+      <li>UR : 11145</li>
+      <li>OBC : 4298</li>
+      <li>BC : 2755</li>
+      <li>EWS : 2508</li>
+      <li>SC : 3525</li>
+      <li>ST : 241</li>
+    </ul>
+  </div>
+
+  <div class="job-box">
+    <h3>Eligibility</h3>
+    <p>10+2 (Intermediate) passed from any recognized board in India.</p>
+  </div>
+
+  <a href="apply.html" class="apply-now">Apply Online</a>
+
+  </section>
 
 <footer>
 <a class="whatsapp" href="https://wa.me/918874256902">
