--- a/jobs.html
+++ b/jobs.html
@@ -86,7 +86,7 @@
     <p>10+2 (Intermediate) passed from any recognized board in India.</p>
   </div>
 
-  <a href="https://bssc.bihar.gov.in/" target="_blank">Apply Online</a>
+  <a href="https://bssc.bihar.gov.in" target="_blank">Apply Online</a>
 
   </section>
 
