--- a/about.html
+++ b/about.html
@@ -12,8 +12,7 @@
 
 <section>
 <p>
-Career With Ashwani ko Ashwani Dubey dwara start kiya gaya hai
-taaki job seekers ko sahi aur latest job information mil sake.
+"Career With Ashwani" is a trusted platform dedicated to guiding aspiring professionals towards their career goals. We specialize in providing the latest updates on government and private job opportunities, comprehensive career guidance, and expert support for job applications and skill development. Our mission is to empower individuals with the knowledge and tools they need to make informed career choices, enhance their skills, and successfully achieve their professional aspirations. At Career With Ashwani, we are committed to helping you take confident steps towards a rewarding future.
 </p>
 
 <p>
