--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 </p>
 
 <p>
-Yahan form filling, resume making aur career guidance services
+Here you can get updates of all types of jobs and you can apply for all types of jobs here, for which we will contact you and provide you the job.
 provide ki jaati hain.
 </p>
 
